2004-08-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (deassignLR),
	* src/ds390/ralloc.c (deassignLR),
	* src/hc08/ralloc.c (deassignLR),
	* src/z80/ralloc.c (deassignLR),
	* src/pic/ralloc.c (deassignLR),
	* src/pic16/ralloc.c (deassignLR),
	* src/avr/ralloc.c (deassignLR),
	* src/SDCClrange.c (findRecursiveSucc, findRecursivePred, findPrevUse,
	rlivePoint): fixed another part of bug #971834

2004-08-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/main.c: enabled "critical" keyword
	* src/z80/mappings.i,
	* src/z80/gen.c (genFunction, genEndFunction): support for interrupt
	functions (fixes bug #979646)
	* doc/sdccman.lyx: added a subsection explaining z80 interrupt support

2004-08-04 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/mcs51/gen.c (genInline): Add \n for labels, not DOS/WIN dirs
	  such as c:\mydir.

2004-08-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCloop.c (loopInvariants): fixed bug 983545, hope this
	  doesn't disable too much optimizations

2004-08-02 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/glue.c Disabled "WARNING: function 'main' undefined" when -S option is used.

2004-08-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCClrange.c (rlivePoint): fixed bug 988568, thanks to anonymous

2004-08-02 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c tidied up tabs
	* src/pic/genarith.c tidied up tabs and fixed bug with literal multiple where same register was used for hi and low byte
	* src/pic/main.c tidied up tabs
	* src/pic/pcode.c tidied up tabs and disabled verbose code generation
	* src/pic/pcoderegs.c tidied up tabs
	* src/pic/ralloc.c tidied up tabs

2004-07-30 Vangelis Rokas <vrokas AT otenet.gr>

	* src/SDCCmem.c (allocGlobal): don't turn S_REGISTER storage class
	to S_FIXED for pic16 port and when symbol is not in level 0,
	allocate for S_REGISTER storage class and pic16 port, too,